examples/test/testpolicy15790.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15790
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key8: value18
      key44: value47
      key15: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value18
      podSelector:
        matchLabels:
          key17: value34
          key11: value25
